expense table coloumns sorting, alignment and ui fixes

--- a/app/assets/stylesheets/expenses.css.scss
+++ b/app/assets/stylesheets/expenses.css.scss
@@ -24,5 +24,5 @@
 }
 
 .expense .grid_table table col.eight {
-  width: 65px;
+  width: 70px;
 }
